<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:hotel="http://schemas.android.com/apk/res/com.shine.hotels"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/index_right"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:contentDescription="@null"
        android:src="@drawable/shang" />

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="800dp"
        android:layout_height="500dp"
        android:background="@drawable/flight_bg" >

        <ImageView
            android:id="@+id/left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@null"
            android:paddingLeft="30dp"
            android:src="@drawable/left" />

        <ImageView
            android:id="@+id/right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/left"
            android:layout_marginRight="32dp"
            android:contentDescription="@null"
            android:paddingRight="30dp"
            android:src="@drawable/right" />

        <com.shine.hotels.ui.widget.TabPageIndicator
            android:id="@+id/titles"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignTop="@id/left"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="-10dp"
            android:layout_toLeftOf="@id/right"
            android:layout_toRightOf="@id/left" />

        <LinearLayout
            android:id="@+id/cells"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_alignLeft="@id/left"
            android:layout_alignRight="@id/right"
            android:layout_below="@id/titles"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                style="@style/FlightInfoText"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:text="@string/flight_airline" />

            <TextView
                style="@style/FlightInfoText"
                android:layout_width="66dp"
                android:layout_height="wrap_content"
                android:text="@string/flight_num" />

            <TextView
                style="@style/FlightInfoText"
                android:layout_width="66dp"
                android:layout_height="wrap_content"
                android:text="@string/flight_expected_depart" />

            <TextView
                style="@style/FlightInfoText"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/flight_actual_depart" />

            <TextView
                style="@style/FlightInfoText"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/flight_depart" />

            <TextView
                style="@style/FlightInfoText"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/flight_depart_t" />

            <TextView
                style="@style/FlightInfoText"
                android:layout_width="66dp"
                android:layout_height="wrap_content"
                android:text="@string/flight_expected_arrive" />

            <TextView
                style="@style/FlightInfoText"
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:text="@string/flight_actual_arrive" />

            <TextView
                style="@style/FlightInfoText"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/flight_destination" />

            <TextView
                style="@style/FlightInfoText"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/flight_destination_t" />

            <TextView
                style="@style/FlightInfoText"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/flight_status" />
        </LinearLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="fill_parent"
            android:layout_height="323dp"
            android:layout_alignLeft="@id/cells"
            android:layout_alignRight="@id/cells"
            android:layout_below="@id/cells"
            android:layout_centerHorizontal="true"
             />
    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@null"
        android:src="@drawable/xia" />

    <!--
         <ImageView
        android:id="@+id/huangyekong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/titles"
        android:layout_centerHorizontal="true"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:contentDescription="@null"
        android:src="@drawable/huangyekong" />
    -->

</LinearLayout>