<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/tanchukuang"
    android:orientation="vertical"
     >

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="5dp"
        android:text="@string/exit_vod"
        android:textColor="@android:color/white"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/confirm"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:background="@drawable/btn_background"
            android:text="@string/confirm"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:background="@drawable/btn_background"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textSize="22sp" />
    </LinearLayout>

</LinearLayout>
