<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="150dp"
    android:layout_height="wrap_content" >

    <ImageView
        android:layout_width="150dp"
        android:layout_height="400dp"
        android:scaleType="fitXY"
        android:src="@drawable/weather_bg2" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <com.shine.hotels.ui.AlwaysMarqueeTextView
            android:id="@+id/weather_item_city"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:paddingLeft="15dp"
            android:text="@string/city"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:fadingEdge="none"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/weather_item_today"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/today"
            android:textColor="#6D6D6D"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/weather_item_image"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:paddingLeft="10dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/weather_sun" />

        <TextView
            android:id="@+id/weather_item_today_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:text="@string/temperature"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/weather_item_tomorrow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/tomorrow"
            android:textColor="#6D6D6D"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/weather_item_tomorrow_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/temperature"
            android:textColor="#3b8d81"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/weather_item_after_tomorrow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/the_day_after_tomorrow"
            android:textColor="#6D6D6D"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/weather_item_after_tomorrow_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/temperature"
            android:textColor="#3b8d81"
            android:textSize="18sp" />
    </LinearLayout>

</FrameLayout>